plugins {
	id 'org.springframework.boot' version '3.5.3' apply false
	id 'io.spring.dependency-management' version '1.1.7' apply false
}

ext {
    javaVersion = 21
    springBootVersion = '3.3.2'
    jjwtVersion = '0.11.5'
}

allprojects {
	group = 'com.knusrae'
	version = '0.0.1-SNAPSHOT'

	repositories {
		mavenCentral()
	}
}

subprojects {
	apply plugin: 'java'
	apply plugin: 'io.spring.dependency-management'

	java {
		sourceCompatibility = JavaVersion.VERSION_21
		targetCompatibility = JavaVersion.VERSION_21

		toolchain {
			languageVersion = JavaLanguageVersion.of(21)
		}
	}

	tasks.withType(JavaCompile).configureEach {
		options.encoding = 'UTF-8'
	}

	tasks.named('test') {
		useJUnitPlatform()
	}

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
        }
    }

	dependencies {
		implementation 'org.postgresql:postgresql:42.6.0'
        implementation 'org.apache.commons:commons-lang3:3.18.0'
        implementation 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation 'org.springframework.boot:spring-boot-starter-security'
        implementation 'org.springframework.boot:spring-boot-starter-validation'

        implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
        annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
        annotationProcessor "jakarta.annotation:jakarta.annotation-api"
        annotationProcessor "jakarta.persistence:jakarta.persistence-api"
	}
}